// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain correct values for theme 1`] = `
{
  "dark": {
    "background": {
      "base": "#0E0E12",
      "shading": "rgba(1, 2, 5, 0.67)",
      "surface": "#212225",
    },
    "contrast": {
      "high": "#AFB0B3",
      "low": "#404044",
      "medium": "#7E7F82",
    },
    "notification": {
      "error": "#CB3333",
      "errorSoft": "rgba(58, 15, 15, 0.7)",
      "info": "#027FFC",
      "infoSoft": "rgba(4, 41, 78, 0.7)",
      "success": "#00C77E",
      "successSoft": "rgba(0, 51, 32, 0.7)",
      "warning": "#DDB84B",
      "warningSoft": "rgba(54, 43, 10, 0.7)",
    },
    "primary": "#FBFCFF",
    "state": {
      "active": "rgba(126, 127, 130, 0.20)",
      "disabled": "#7E7F82",
      "focus": "#1E5BEB",
      "hover": "rgba(126, 127, 130, 0.20)",
    },
  },
  "light": {
    "background": {
      "base": "#FFF",
      "shading": "rgba(1, 2, 5, 0.67)",
      "surface": "#EEEFF2",
    },
    "contrast": {
      "high": "#535457",
      "low": "#D8D8DB",
      "medium": "#949598",
    },
    "notification": {
      "error": "#E7323B",
      "errorSoft": "rgba(255, 226, 228, 0.7)",
      "info": "#1E5BEB",
      "infoSoft": "rgba(211, 225, 255, 0.7)",
      "success": "#32B85B",
      "successSoft": "rgba(228, 255, 236, 0.7)",
      "warning": "#FECC1B",
      "warningSoft": "rgba(255, 244, 210, 0.7)",
    },
    "primary": "#010205",
    "state": {
      "active": "rgba(148, 149, 152, 0.20)",
      "disabled": "#949598",
      "focus": "#0A0AFF",
      "hover": "rgba(148, 149, 152, 0.20)",
    },
  },
}
`;

exports[`should contain correct values for themeDark 1`] = `
{
  "background": {
    "base": "#0E0E12",
    "shading": "rgba(1, 2, 5, 0.67)",
    "surface": "#212225",
  },
  "contrast": {
    "high": "#AFB0B3",
    "low": "#404044",
    "medium": "#7E7F82",
  },
  "notification": {
    "error": "#CB3333",
    "errorSoft": "rgba(58, 15, 15, 0.7)",
    "info": "#027FFC",
    "infoSoft": "rgba(4, 41, 78, 0.7)",
    "success": "#00C77E",
    "successSoft": "rgba(0, 51, 32, 0.7)",
    "warning": "#DDB84B",
    "warningSoft": "rgba(54, 43, 10, 0.7)",
  },
  "primary": "#FBFCFF",
  "state": {
    "active": "rgba(126, 127, 130, 0.20)",
    "disabled": "#7E7F82",
    "focus": "#1E5BEB",
    "hover": "rgba(126, 127, 130, 0.20)",
  },
}
`;

exports[`should contain correct values for themeDarkBackgroundBase 1`] = `"#0E0E12"`;

exports[`should contain correct values for themeDarkBackgroundShading 1`] = `"rgba(1, 2, 5, 0.67)"`;

exports[`should contain correct values for themeDarkBackgroundSurface 1`] = `"#212225"`;

exports[`should contain correct values for themeDarkContrastHigh 1`] = `"#AFB0B3"`;

exports[`should contain correct values for themeDarkContrastLow 1`] = `"#404044"`;

exports[`should contain correct values for themeDarkContrastMedium 1`] = `"#7E7F82"`;

exports[`should contain correct values for themeDarkNotificationError 1`] = `"#CB3333"`;

exports[`should contain correct values for themeDarkNotificationErrorSoft 1`] = `"rgba(58, 15, 15, 0.7)"`;

exports[`should contain correct values for themeDarkNotificationInfo 1`] = `"#027FFC"`;

exports[`should contain correct values for themeDarkNotificationInfoSoft 1`] = `"rgba(4, 41, 78, 0.7)"`;

exports[`should contain correct values for themeDarkNotificationSuccess 1`] = `"#00C77E"`;

exports[`should contain correct values for themeDarkNotificationSuccessSoft 1`] = `"rgba(0, 51, 32, 0.7)"`;

exports[`should contain correct values for themeDarkNotificationWarning 1`] = `"#DDB84B"`;

exports[`should contain correct values for themeDarkNotificationWarningSoft 1`] = `"rgba(54, 43, 10, 0.7)"`;

exports[`should contain correct values for themeDarkPrimary 1`] = `"#FBFCFF"`;

exports[`should contain correct values for themeDarkStateActive 1`] = `"rgba(126, 127, 130, 0.20)"`;

exports[`should contain correct values for themeDarkStateDisabled 1`] = `"#7E7F82"`;

exports[`should contain correct values for themeDarkStateFocus 1`] = `"#1E5BEB"`;

exports[`should contain correct values for themeDarkStateHover 1`] = `"rgba(126, 127, 130, 0.20)"`;

exports[`should contain correct values for themeLight 1`] = `
{
  "background": {
    "base": "#FFF",
    "shading": "rgba(1, 2, 5, 0.67)",
    "surface": "#EEEFF2",
  },
  "contrast": {
    "high": "#535457",
    "low": "#D8D8DB",
    "medium": "#949598",
  },
  "notification": {
    "error": "#E7323B",
    "errorSoft": "rgba(255, 226, 228, 0.7)",
    "info": "#1E5BEB",
    "infoSoft": "rgba(211, 225, 255, 0.7)",
    "success": "#32B85B",
    "successSoft": "rgba(228, 255, 236, 0.7)",
    "warning": "#FECC1B",
    "warningSoft": "rgba(255, 244, 210, 0.7)",
  },
  "primary": "#010205",
  "state": {
    "active": "rgba(148, 149, 152, 0.20)",
    "disabled": "#949598",
    "focus": "#0A0AFF",
    "hover": "rgba(148, 149, 152, 0.20)",
  },
}
`;

exports[`should contain correct values for themeLightBackgroundBase 1`] = `"#FFF"`;

exports[`should contain correct values for themeLightBackgroundShading 1`] = `"rgba(1, 2, 5, 0.67)"`;

exports[`should contain correct values for themeLightBackgroundSurface 1`] = `"#EEEFF2"`;

exports[`should contain correct values for themeLightContrastHigh 1`] = `"#535457"`;

exports[`should contain correct values for themeLightContrastLow 1`] = `"#D8D8DB"`;

exports[`should contain correct values for themeLightContrastMedium 1`] = `"#949598"`;

exports[`should contain correct values for themeLightNotificationError 1`] = `"#E7323B"`;

exports[`should contain correct values for themeLightNotificationErrorSoft 1`] = `"rgba(255, 226, 228, 0.7)"`;

exports[`should contain correct values for themeLightNotificationInfo 1`] = `"#1E5BEB"`;

exports[`should contain correct values for themeLightNotificationInfoSoft 1`] = `"rgba(211, 225, 255, 0.7)"`;

exports[`should contain correct values for themeLightNotificationSuccess 1`] = `"#32B85B"`;

exports[`should contain correct values for themeLightNotificationSuccessSoft 1`] = `"rgba(228, 255, 236, 0.7)"`;

exports[`should contain correct values for themeLightNotificationWarning 1`] = `"#FECC1B"`;

exports[`should contain correct values for themeLightNotificationWarningSoft 1`] = `"rgba(255, 244, 210, 0.7)"`;

exports[`should contain correct values for themeLightPrimary 1`] = `"#010205"`;

exports[`should contain correct values for themeLightStateActive 1`] = `"rgba(148, 149, 152, 0.20)"`;

exports[`should contain correct values for themeLightStateDisabled 1`] = `"#949598"`;

exports[`should contain correct values for themeLightStateFocus 1`] = `"#0A0AFF"`;

exports[`should contain correct values for themeLightStateHover 1`] = `"rgba(148, 149, 152, 0.20)"`;
